[project]
name = "mallocator"
version = "0.1.0"
description = "A custom PyTorch GPU memory allocator with graceful OOM handling."
readme = "README.md"
dependencies = []


[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true